fixing body structure

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,3 +36,12 @@ body {
 .contact {
   font-size: 18px;
 }
+
+.experienceSizeText {
+  font-size: 14px;
+  font-weight: 600;
+}
+.educationSizeText {
+  font-size: 14px;
+  font-weight: 600;
+}
